--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.incremental":"true"]
+            }
+        }
     }
     androidExtensions {
         experimental = true
@@ -57,3 +62,5 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2")
 }
+
+
