--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Backgammon">
         <activity
+            android:name=".Highscores"
+            android:screenOrientation="landscape"
+            android:theme="@style/NoActionBarTheme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".Menu"
             android:screenOrientation="landscape"
             android:theme="@style/NoActionBarTheme"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".Backgammon"
             android:screenOrientation="landscape"
             android:theme="@style/NoActionBarTheme"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape"
